...
                                    <action selector="addButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f3N-JA-Ps3"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mle-Lo-rth">
                                <rect key="frame" x="372" y="428" width="22" height="22"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Button" image="arrow.clockwise" catalog="system"/>
                                <connections>
                                    <action selector="refreshButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gRm-nm-a2F"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Введите название дела" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pc1-pE-jhm">
                                <rect key="frame" x="113" y="302" width="187" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="Описание" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7rz-c5-65E" userLabel="textFieldTwo">
                                <rect key="frame" x="19" y="447" width="374" height="162"/>
                                <color key="backgroundColor" red="0.51777333020000005" green="0.83671838050000003" blue="0.52936184409999998" alpha="0.11191543267697704" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="textColor" systemColor="labelColor"/>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
...
                                <color key="tintColor" red="0.51777333020000005" green="0.83671838050000003" blue="0.52936184409999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <state key="normal" backgroundImage="plus.viewfinder" catalog="system"/>
                                <connections>
                                    <action selector="addButtonConfirm:" destination="k9w-tg-TNv" eventType="touchUpInside" id="P9t-qa-Xpj"/>
                                </connections>
                            </button>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Название" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XbK-Ka-KfW">
                                <rect key="frame" x="20" y="331" width="374" height="53"/>
                                <color key="backgroundColor" red="0.51777333020000005" green="0.83671838050000003" blue="0.52936184409999998" alpha="0.1119154327" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="textColor" systemColor="labelColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
...
