...
        realm.add(value)
    }
}
}


//добавляет кнопку "Готово" на клавиатуру. Код не мой - нашел с трудом в интернете, тк мои знания еще не позволяют придумать самому
extension UITextView{
    
    @IBInspectable var doneAccessory: Bool{
        get{
            return self.doneAccessory
        }
...
